[tool.poetry]
name = "timed"
version = "0.0.0"
description = "Timetracking software"
repository = "https://github.com/adfinis/timed-backend"
authors = ["Adfinis AG"]
license = "AGPL-3.0"
readme = "README.md"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.8",
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.9.0"
django = "~5.2.9"
# might remove this once we find out how the jsonapi extras_require work
django-cors-headers = "^4.9.0"
django-filter = "^25.2"
django-prometheus = "^2.4.1"
djangorestframework = "^3.16.1"
djangorestframework-jsonapi = "^8.1.0"
mozilla-django-oidc = "^4.0.1"
pytz = "^2025.2"
pyexcel-webio = "^0.1.4"
pyexcel-io = "^0.6.7"
django-excel = "^0.0.10"
django-nested-inline = "^0.4.5"
pyexcel-ods3 = "^0.6.1"
pyexcel-xlsx = "^0.6.1"
pyexcel-ezodf = "^0.3.4"
django-environ = "^0.12.0"
django-money = "^3.5.4"
python-redmine = "^2.5.0"
sentry-sdk = "^2.48.0"
whitenoise = "^6.11.0"
django-hurricane = "^1.6.2"
psycopg = {extras = ["binary"], version = "^3.3.2"}
tornado = "~6.5" # https://github.com/django-hurricane/django-hurricane/issues/140

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
coverage = "7.13.0"
django-extensions = "4.1"
factory-boy = "3.3.3"
ipdb = "0.13.13"
pdbpp = "0.11.7"
pytest = "9.0.2"
pytest-cov = "7.0.0"
pytest-django = "4.11.1"
pytest-env = "1.2.0"
pytest-factoryboy = "2.8.1"
pytest-mock = "3.15.1"
pytest-randomly = "3.16.0"
requests-mock = "1.12.1"
lxml = "6.0.2"
syrupy = "^5.0.0"
pytest-freezer = "^0.4.9"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "timed.settings"
cache_dir = "/home/timed/.cache/pytest"
addopts = "--reuse-db --randomly-seed=1521188767 --randomly-dont-reorganize"
env = [
    "DJANGO_OIDC_USERNAME_CLAIM=sub"
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    # following is needed beceause of https://github.com/mozilla/mozilla-django-oidc/pull/371
    "ignore:distutils Version classes are deprecated:DeprecationWarning", # deprecation in pytest-freezegun
    "ignore:.*is deprecated in favour of new moneyed.l10n.format_money.*",
    "ignore:.*invalid escape sequence.*",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    "ignore:.*datetime.datetime.utcnow.*" # https://foss.heptapod.net/openpyxl/openpyxl/-/merge_requests/435 isn't included in a release of openpyxl yet and we are stuck on 3.0.10 because of https://github.com/pyexcel/pyexcel-xlsx/issues/52
]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
    "if TYPE_CHECKING",
]
omit = [
    "*/migrations/*",
    "*/apps.py",
    "*/admin.py",
    "manage.py",
    "timed/redmine/management/commands/import_project_data.py",
    "timed/settings_*.py",
    "timed/wsgi.py",
    "timed/forms.py",
    "setup.py",
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
